[tool.poetry]
name = "jax-rampup"
version = "0.1.0"
description = ""
authors = ["Ulrich Ludmann <uli@ul-cps.io>"]
readme = "README.md"
packages = [{include = "jax_rampup"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"
jax = "^0.4.13"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
